k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myweb-backend-deployment
spec:
  selector:
    matchLabels:
      app: myweb-backend
  template:
    metadata:
      labels:
        app: myweb-backend
    spec:
      containers:
      - name: myweb-backend
        image: <AWS_ACCOUNT_ID>.dkr.ecr.ap-northeast-2.amazonaws.com/myweb-dev-backend-gong-0514:latest
        ports:
        - containerPort: 8080
