k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myweb-backend-service
spec:
  selector:
    app: myweb-backend
  ports:
    - port: 80
      targetPort: 8080
